# physilab-project

./: 404.html  README.md  index.html  main.py  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml
.github/workflows/: tests.yml
architecture/: index.html
data/: database.json
development/: index.html
docs/: api.md  architecture.md  development.md  getting-started.md  guia_usuario.md  index.md  reference.md
docs/user-guide/: commands.md  persistence.md
getting-started/: index.html
guia_usuario/: index.html
interfaces/streamlit_app/pages/: analisis.py  ensayos.py
reference/: index.html
referencia/api/: index.html
search/: search_index.json
src/api/: dependencies.py  main.py
src/api/routers/: experiments.py
src/app/: main.py
src/app/pages/: analisis.py  ensayos.py  mru.py
src/core/: config.py  exceptions.py
src/mi_app/: cli.py  exceptions.py  models.py  services.py  storage.py
src/mi_app/models/: __init__.py  ensayo_base.py  mru.py  mrua.py
src/schemas/: experiment.py  mru.py  mrua.py
src/services/: physics_service.py
src/storage/: base.py  experiment_repository.py
tests/: test_services.py
user-guide/commands/: index.html
user-guide/persistence/: index.html
