[project]
name = "physilab-project"
version = "0.1.0"
description = "Cuaderno de laboratorio digital para simular y registrar ensayos de cinem치tica (MRU, Tiro Parab칩lico) con c치lculos autom치ticos"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "numpy>=2.4.2",
    "pytest>=9.0.2",
    "rich>=14.3.2",
    "ruff>=0.15.2",
    "typer>=0.24.0",
]
