[project]
name = "physilab-project"
version = "0.1.0"
description = "Cuaderno de laboratorio digital para simular y registrar ensayos de cinemática (MRU, Tiro Parabólico) con cálculos automáticos"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.136.1",
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.7.4",
    "mkdocstrings[python]>=1.0.3",
    "numpy>=2.4.2",
    "plotly>=6.6.0",
    "pydantic-settings>=2.14.0",
    "pytest>=9.0.2",
    "python-dotenv>=1.2.2",
    "radon>=6.0.1",
    "rich>=14.3.2",
    "ruff>=0.15.2",
    "streamlit>=1.55.0",
    "supabase>=2.28.3",
    "typer>=0.24.0",
]
